Fixed alignment issues with home page buttons #273

--- a/src/styles/home/_home.scss
+++ b/src/styles/home/_home.scss
@@ -206,6 +206,15 @@
   }
 }
 
+@media (max-width: 47em) {
+  .text-left-md {
+    text-align : center;
+  }
+  .text-right-md {
+    text-align : center;
+  }
+}
+
 
 
 
